[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BJ_CSDA"
version = "0.0.1"
authors = [
  { name="Melek Derman", email="dermanm@oregonstate.edu" },
]

description = ""
readme = "README.md"
requires-python = ">=3.9.1, <3.12"
license = {file = "LICENSE"}
keywords = ["Block-Jacobi", "nuclear engineering", "charged particle transport", "HPC", "GPU", "numba", "mpi4py"]
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: BSD License',
    'Intended Audience :: Science/Research',
    'Typing :: Typed',
    'Natural Language :: English',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
dependencies = [
    "numba>0.60.0",
    "numpy",
    "scipy",
    "matplotlib",
    "mpi4py>=3.1.5",
    "pytest",
    "h5py",
    "colorama",
    "black",
    "sympy",
    "pre-commit",
    "cvxpy"
]
[project.optional-dependencies]
    docs = ["sphinx==7.2.6", "furo", "sphinx_toolbox"]



[project.urls]
Repository = "https://github.com/melekderman/BJ_CSDA.git"
Homepage = "https://melekderman.github.io/"
Documentation = ""
Issues = "https://github.com/melekderman/BJ_CSDA/issues"